syntax = "proto3";

option java_package = "com.okbasalman.grpc";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

service ProductService {
    rpc GetProductById (GetProductByIdRequest) returns (ProductResponse);
    rpc GetAllProducts (google.protobuf.Empty) returns (ProductListResponse);
    rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
    rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
    rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
    rpc DecreaseStock (DecreaseStockRequest) returns (ProductResponse);

    rpc GetVariantById (GetVariantByIdRequest) returns (ProductVariantResponse);
     rpc GetVariantByDetails (GetVariantByDetailsRequest) returns (GetVariantByDetailsResponse);
}

// Request to get variant by details
message GetVariantByDetailsRequest {
  int64 productId = 1;
  string size = 2;
  string color = 3;
}

// Response only contains the variant ID
message GetVariantByDetailsResponse {
  int64 variantId = 1;
}

message ProductImageResponse {
    int64 id = 1;
    string base64Data = 2;
}

message ProductVariantResponse {
    int64 id = 1;
    double price = 2;
    int32 stock = 3;
    string color = 4;
    string size = 5;
    repeated ProductImageResponse images = 6;
}

message ProductResponse {
    int64 id = 1;
    string name = 2;
    string description = 3;
    string season = 4;
    repeated ProductVariantResponse variants = 5;
}

message ProductListResponse {
    repeated ProductResponse products = 1;
}

message GetProductByIdRequest {
    int64 id = 1;
}

message GetVariantByIdRequest {
    int64 id = 1;
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    string season = 3;
    repeated ProductVariantCreateRequest variants = 4;
}

message ProductVariantCreateRequest {
    double price = 1;
    int32 stock = 2;
    string color = 3;
    string size = 4;
    repeated string base64Images = 5;
}

message UpdateProductRequest {
    int64 id = 1;
    string name = 2;
    string description = 3;
    string season = 4;
    repeated ProductVariantUpdateRequest variants = 5;
}

message ProductVariantUpdateRequest {
    int64 id = 1;
    double price = 2;
    int32 stock = 3;
    string color = 4;
    string size = 5;
    repeated ProductImageUpdateRequest images = 6;
}

message ProductImageUpdateRequest {
    int64 id = 1;
    string base64Data = 2;
}

message DeleteProductRequest {
    int64 id = 1;
}

message DeleteProductResponse {
    bool success = 1;
    string message = 2;
}

message DecreaseStockRequest {
    int64 productVariantId = 1;
    int32 quantity = 2;
}